src/test/testData/kubernetes/KUBE003/pod-network.yaml.denied
apiVersion: v1
kind: Pod
metadata:
    name: test
spec:
      containers:
      - args:
        - server
        env:
          - name: BASE_HREF
            value: /argo/
        image: test:latest
        name: test
      - name : test2
        image : test
      hostNetwork: <error descr="Sharing the host namespace could lead to security issues.">true</error>